--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -257,9 +257,9 @@
 							<div class="col-xs-12 col-sm-3 mar-bottom-md">
 								<!-- start of team-box -->
 								<div class="team-box text-center">
-									<div class="img-box"><img src="../images/equipe/barao.jpg" alt="image" class="img-responsive"></div>
-									<h3 class="heading">Vitor Barão </h3>
-									<span class="text h5">#{{page.barao1}} #{{page.barao2}}</span>
+									<div class="img-box"><img src="../images/equipe/carol.jpg" alt="image" class="img-responsive"></div>
+									<h3 class="heading">Carolina Puppe </h3>
+									<span class="text h5">#{{page.carol1}} #{{page.carol2}}</span>
 								</div><!-- end of team-box -->
 							</div>
                             <div class="col-xs-12 col-sm-3 mar-bottom-md">
