--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -24,7 +24,7 @@
         <!-- include the site stylesheet -->
         <link rel="stylesheet" href="../css/plugin-resets.css">
         <!-- include the site stylesheet -->
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <!-- include the site stylesheet -->
         <link rel="stylesheet" href="../css/responsive.css">
         <!-- include the site stylesheet -->
