--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -64,10 +64,15 @@
                                                 <li>
                                                     <a href="#equipe">{{page.menuEquipe}}</a>
                                                 </li>
+                                                <li class="btn btn-info"><a href="index.html">PT</a></li>
+                                                <li class="btn btn-info"><a href="en.html">EN</a></li>
                                             </ul>
                                         </nav><!-- end of page navigation -->
 
                                     </div>
+                                </div>
+                                <div class="col-xs-12" style="padding-left: 24px">
+                                    <h6><a href="index.html">PT</a> | <a href="en.html">EN</a></h6>
                                 </div>
                             </div>
                         </div>
